// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Default Alert 1`] = `
.alert {
  padding: 15px !important;
  background: #3F88C5 !important;
  border: 1px solid #3F88C5 !important;
  color: #fff !important;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24) !important;
  -webkit-transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  -moz-transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  border-radius: 4px !important;
  margin-bottom: 15px !important;
  position: relative !important;
}

<div
  className="alert"
  style={
    Object {
      "display": "block",
    }
  }
>
  Test alert
</div>
`;

exports[`Alert Dismissible Alert 1`] = `
.alert {
  padding: 15px !important;
  background: #9BC53D !important;
  border: 1px solid #9BC53D !important;
  color: #fff !important;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24) !important;
  -webkit-transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  -moz-transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  border-radius: 4px !important;
  margin-bottom: 15px !important;
  position: relative !important;
}

.close {
  text-align: left !important;
  position: absolute !important;
  -webkit-transform: rotate(45deg) !important;
  -ms-transform: rotate(45deg) !important;
  transform: rotate(45deg) !important;
  cursor: pointer !important;
  font-family: -webkit-pictograph !important;
  font-weight: bold !important;
  line-height: 28px !important;
  width: 28px !important;
  height: 28px !important;
  font-size: 28px !important;
  right: 7.5px !important;
  top: 15px !important;
  -webkit-user-select: none !important;
  -moz-user-select: none !important;
  -ms-user-select: none !important;
  user-select: none !important;
  opacity: 0.7 !important;
}

.close:hover {
  opacity: 1 !important;
}

<div
  className="alert"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    className="close"
    onClick={[Function]}
  >
    +
  </div>
  Test alert
</div>
`;

exports[`Alert Outline Alert 1`] = `
.alert {
  padding: 15px !important;
  background: #E76846 !important;
  border: 1px solid #D15130 !important;
  color: #fff !important;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24) !important;
  -webkit-transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  -moz-transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
  border-radius: 4px !important;
  margin-bottom: 15px !important;
  position: relative !important;
}

<div
  className="alert"
  style={
    Object {
      "display": "block",
    }
  }
>
  Test alert
</div>
`;
